--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Doove
+Theme Name: Freek Vonk
 Theme URI: https://daysix.nl
 Author: Day Six
 Author URI: https://daysix.nl
-Version: 1.3
+Version: 1.0
 Requires at least: 5.0
 Tested up to: 5.4
-Requires PHP: 7.0
+Requires PHP: 8.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: day-six
