--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -523,7 +523,7 @@ video {
   }
 }
 .container {
-  max-width: 390px;
+  max-width: 354px;
   width: auto;
   margin-left: auto;
   margin-right: auto;
@@ -533,15 +533,15 @@ video {
 @media (min-width: 640px) {
 
   .container {
-    max-width: 390px;
+    max-width: 354px;
     width: auto;
   }
 }
 @media (min-width: 768px) {
 
   .container {
-    max-width: 688px;
-    width: 688px;
+    max-width: 603px;
+    width: 603px;
     padding-left: 0px;
     padding-right: 0px;
   }
@@ -549,8 +549,8 @@ video {
 @media (min-width: 1200px) {
 
   .container {
-    max-width: 1130px;
-    width: 1130px;
+    max-width: 1145px;
+    width: 1145px;
     padding-left: 0px;
     padding-right: 0px;
   }
@@ -558,11 +558,66 @@ video {
 @media (min-width: 1352px) {
 
   .container {
-    max-width: 1272px;
-    width: 1272px;
+    max-width: 1145px;
+    width: 1145px;
     padding-left: 0px;
     padding-right: 0px;
   }
+}
+.visible {
+  visibility: visible;
+}
+.fixed {
+  position: fixed;
+}
+.absolute {
+  position: absolute;
+}
+.relative {
+  position: relative;
+}
+.bottom-0 {
+  bottom: 0;
+}
+.left-0 {
+  left: 0;
+}
+.left-\[20px\] {
+  left: 20px;
+}
+.right-0 {
+  right: 0;
+}
+.right-\[20px\] {
+  right: 20px;
+}
+.top-0 {
+  top: 0;
+}
+.top-\[100px\] {
+  top: 100px;
+}
+.top-\[unset\] {
+  top: unset;
+}
+.-z-10 {
+  z-index: -10;
+}
+.z-\[-1\] {
+  z-index: -1;
+}
+.z-\[9999\] {
+  z-index: 9999;
+}
+.z-\[999\] {
+  z-index: 999;
+}
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.mx-\[20px\] {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 .mx-auto {
   margin-left: auto;
@@ -575,6 +630,12 @@ video {
 .mb-4 {
   margin-bottom: 40px;
 }
+.mb-\[1px\] {
+  margin-bottom: 1px;
+}
+.ml-\[15px\] {
+  margin-left: 15px;
+}
 .ml-\[20px\] {
   margin-left: 20px;
 }
@@ -583,6 +644,9 @@ video {
 }
 .mt-10 {
   margin-top: 100px;
+}
+.mt-\[33px\] {
+  margin-top: 33px;
 }
 .mt-\[47px\] {
   margin-top: 47px;
@@ -593,6 +657,9 @@ video {
 .flex {
   display: flex;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
@@ -602,11 +669,32 @@ video {
 .h-5 {
   height: 50px;
 }
+.h-\[18px\] {
+  height: 18px;
+}
 .h-\[337px\] {
   height: 337px;
 }
+.h-\[33px\] {
+  height: 33px;
+}
+.h-\[40px\] {
+  height: 40px;
+}
 .h-\[421px\] {
   height: 421px;
+}
+.h-\[50px\] {
+  height: 50px;
+}
+.h-\[calc\(100vh-100px\)\] {
+  height: calc(100vh - 100px);
+}
+.h-\[calc\(100vh-33px\)\] {
+  height: calc(100vh - 33px);
+}
+.h-\[calc\(70vh-33px\)\] {
+  height: calc(70vh - 33px);
 }
 .h-auto {
   height: auto;
@@ -614,20 +702,55 @@ video {
 .h-full {
   height: 100%;
 }
+.h-screen {
+  height: 100vh;
+}
+.h-\[100dvh\] {
+  height: 100dvh;
+}
 .max-h-\[unset\] {
   max-height: unset;
+}
+.w-\[110px\] {
+  width: 110px;
+}
+.w-\[40\%\] {
+  width: 40%;
+}
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .w-full {
   width: 100%;
 }
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+.w-screen {
+  width: 100vw;
+}
 .max-w-\[206px\] {
   max-width: 206px;
+}
+.max-w-\[600px\] {
+  max-width: 600px;
 }
 .max-w-\[89px\] {
   max-width: 89px;
 }
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
+}
+.items-end {
+  align-items: flex-end;
 }
 .items-center {
   align-items: center;
@@ -635,10 +758,33 @@ video {
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .space-x-\[15px\] > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(15px * var(--tw-space-x-reverse));
   margin-left: calc(15px * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-\[20px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(20px * var(--tw-space-x-reverse));
+  margin-left: calc(20px * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-\[50px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(50px * var(--tw-space-x-reverse));
+  margin-left: calc(50px * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-\[70px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(70px * var(--tw-space-x-reverse));
+  margin-left: calc(70px * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-\[15px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(15px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(15px * var(--tw-space-y-reverse));
 }
 .space-y-\[32px\] > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -649,6 +795,26 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(45px * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(45px * var(--tw-space-y-reverse));
+}
+.overflow-hidden {
+  overflow: hidden;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+.bg-\[\#0A1F161A\] {
+  background-color: #0A1F161A;
+}
+.bg-\[\#438645\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 134 69 / var(--tw-bg-opacity));
+}
+.bg-\[\#8CC63F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 198 63 / var(--tw-bg-opacity));
 }
 .bg-\[\#F4F4F4\] {
   --tw-bg-opacity: 1;
@@ -662,9 +828,36 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 121 34 / var(--tw-bg-opacity));
 }
+.bg-\[\#f3f3f3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 31 22 / var(--tw-bg-opacity));
+}
+.bg-green-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.from-\[transparent\] {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.via-\[\#0a1f169b\] {
+  --tw-gradient-to: rgb(10 31 22 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #0a1f169b var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+.to-\[\#0a1f16\] {
+  --tw-gradient-to: #0a1f16 var(--tw-gradient-to-position);
 }
 .bg-cover {
   background-size: cover;
@@ -675,6 +868,14 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+.px-4 {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 .px-\[12px\] {
   padding-left: 12px;
@@ -692,8 +893,26 @@ video {
 .pb-5 {
   padding-bottom: 50px;
 }
+.pb-\[120px\] {
+  padding-bottom: 120px;
+}
 .pb-\[25px\] {
   padding-bottom: 25px;
+}
+.pl-\[4px\] {
+  padding-left: 4px;
+}
+.pt-2 {
+  padding-top: 20px;
+}
+.pt-\[150px\] {
+  padding-top: 150px;
+}
+.pt-\[20px\] {
+  padding-top: 20px;
+}
+.pt-\[33px\] {
+  padding-top: 33px;
 }
 .pt-\[41px\] {
   padding-top: 41px;
@@ -701,17 +920,23 @@ video {
 .text-center {
   text-align: center;
 }
-.font-nunito {
-  font-family: nunito sans;
+.font-karlsen {
+  font-family: Karlsen, sans-serif;
 }
-.font-satoshi {
-  font-family: satoshi;
+.font-tanker {
+  font-family: Tanker, sans-serif;
 }
 .text-12 {
   font-size: 12px;
 }
+.text-13 {
+  font-size: 13px;
+}
 .text-15 {
   font-size: 15px;
+}
+.text-16 {
+  font-size: 16px;
 }
 .text-18 {
   font-size: 18px;
@@ -722,6 +947,9 @@ video {
 .text-25 {
   font-size: 25px;
 }
+.text-55 {
+  font-size: 55px;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -730,6 +958,15 @@ video {
 }
 .font-semibold {
   font-weight: 600;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.leading-15 {
+  line-height: 15px;
+}
+.leading-17 {
+  line-height: 17px;
 }
 .leading-20 {
   line-height: 20px;
@@ -740,8 +977,14 @@ video {
 .leading-30 {
   line-height: 30px;
 }
+.leading-32 {
+  line-height: 32px;
+}
 .leading-33 {
   line-height: 33px;
+}
+.leading-48 {
+  line-height: 48px;
 }
 .text-\[\#332E2A\] {
   --tw-text-opacity: 1;
@@ -757,6 +1000,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(237 112 31 / var(--tw-text-opacity));
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(10 31 22 / var(--tw-text-opacity));
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -766,13 +1013,27 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.duration-300 {
+  transition-duration: 300ms;
+}
+.hover\:bg-\[\#78B893\]\/60:hover {
+  background-color: rgb(120 184 147 / 0.6);
+}
 .hover\:bg-\[\#FF7922\]\/\[0\.75\]:hover {
   background-color: rgb(255 121 34 / 0.75);
+}
+.hover\:text-\[\#FADE6C\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(250 222 108 / var(--tw-text-opacity));
 }
 @media (min-width: 768px) {
 
   .md\:mb-5 {
     margin-bottom: 50px;
+  }
+
+  .md\:mb-\[4px\] {
+    margin-bottom: 4px;
   }
 
   .md\:ml-\[55px\] {
@@ -791,6 +1052,14 @@ video {
     display: flex;
   }
 
+  .md\:h-\[12\.5px\] {
+    height: 12.5px;
+  }
+
+  .md\:h-\[17\.68px\] {
+    height: 17.68px;
+  }
+
   .md\:h-\[287px\] {
     height: 287px;
   }
@@ -801,6 +1070,14 @@ video {
 
   .md\:h-\[42px\] {
     height: 42px;
+  }
+
+  .md\:h-\[55px\] {
+    height: 55px;
+  }
+
+  .md\:h-\[calc\(100vh-200px\)\] {
+    height: calc(100vh - 200px);
   }
 
   .md\:h-screen {
@@ -883,6 +1160,14 @@ video {
     font-size: 40px;
   }
 
+  .md\:text-60 {
+    font-size: 60px;
+  }
+
+  .md\:text-80 {
+    font-size: 80px;
+  }
+
   .md\:leading-14 {
     line-height: 14px;
   }
@@ -902,8 +1187,37 @@ video {
   .md\:leading-46 {
     line-height: 46px;
   }
+
+  .md\:leading-53 {
+    line-height: 53px;
+  }
+
+  .md\:leading-66 {
+    line-height: 66px;
+  }
 }
 @media (min-width: 1200px) {
+
+  .lg\:absolute {
+    position: absolute;
+  }
+
+  .lg\:relative {
+    position: relative;
+  }
+
+  .lg\:bottom-\[65px\] {
+    bottom: 65px;
+  }
+
+  .lg\:left-\[40px\] {
+    left: 40px;
+  }
+
+  .lg\:mx-\[40px\] {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
 
   .lg\:mb-\[25px\] {
     margin-bottom: 25px;
@@ -921,6 +1235,10 @@ video {
     margin-top: 43px;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:h-\[287px\] {
     height: 287px;
   }
@@ -931,6 +1249,10 @@ video {
 
   .lg\:h-\[35px\] {
     height: 35px;
+  }
+
+  .lg\:h-\[calc\(100vh-33px\)\] {
+    height: calc(100vh - 33px);
   }
 
   .lg\:max-h-\[unset\] {
@@ -949,8 +1271,20 @@ video {
     width: 524px;
   }
 
+  .lg\:w-\[60\%\] {
+    width: 60%;
+  }
+
   .lg\:max-w-\[207px\] {
     max-width: 207px;
+  }
+
+  .lg\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
+  .lg\:max-w-\[333px\] {
+    max-width: 333px;
   }
 
   .lg\:max-w-\[569px\] {
@@ -959,6 +1293,10 @@ video {
 
   .lg\:max-w-\[747\] {
     max-width: 747;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:space-y-\[35px\] > :not([hidden]) ~ :not([hidden]) {
@@ -998,6 +1336,10 @@ video {
     padding-top: 34px;
   }
 
+  .lg\:text-left {
+    text-align: left;
+  }
+
   .lg\:text-12 {
     font-size: 12px;
   }
@@ -1014,6 +1356,14 @@ video {
     font-size: 61px;
   }
 
+  .lg\:text-70 {
+    font-size: 70px;
+  }
+
+  .lg\:text-80 {
+    font-size: 80px;
+  }
+
   .lg\:leading-18 {
     line-height: 18px;
   }
@@ -1026,11 +1376,27 @@ video {
     line-height: 29px;
   }
 
+  .lg\:leading-63 {
+    line-height: 63px;
+  }
+
   .lg\:leading-70 {
     line-height: 70px;
   }
+
+  .lg\:leading-78 {
+    line-height: 78px;
+  }
 }
 @media (min-width: 1352px) {
+
+  .xl\:bottom-\[40px\] {
+    bottom: 40px;
+  }
+
+  .xl\:left-\[40px\] {
+    left: 40px;
+  }
 
   .xl\:mb-3 {
     margin-bottom: 30px;
@@ -1128,6 +1494,14 @@ video {
     font-size: 70px;
   }
 
+  .xl\:text-74 {
+    font-size: 74px;
+  }
+
+  .xl\:text-80 {
+    font-size: 80px;
+  }
+
   .xl\:text-\[25px\] {
     font-size: 25px;
   }
@@ -1142,6 +1516,14 @@ video {
 
   .xl\:leading-33 {
     line-height: 33px;
+  }
+
+  .xl\:leading-66 {
+    line-height: 66px;
+  }
+
+  .xl\:leading-78 {
+    line-height: 78px;
   }
 
   .xl\:leading-80 {
