--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -600,6 +600,15 @@ video {
 .top-\[unset\] {
   top: unset;
 }
+.top-\[150px\] {
+  top: 150px;
+}
+.top-\[120px\] {
+  top: 120px;
+}
+.top-\[110px\] {
+  top: 110px;
+}
 .-z-10 {
   z-index: -10;
 }
@@ -611,6 +620,9 @@ video {
 }
 .z-\[999\] {
   z-index: 999;
+}
+.z-\[99999\] {
+  z-index: 99999;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
@@ -1040,6 +1052,14 @@ video {
 }
 @media (min-width: 768px) {
 
+  .md\:left-\[80px\] {
+    left: 80px;
+  }
+
+  .md\:top-\[150px\] {
+    top: 150px;
+  }
+
   .md\:mb-5 {
     margin-bottom: 50px;
   }
@@ -1230,6 +1250,10 @@ video {
     left: 40px;
   }
 
+  .lg\:top-\[110px\] {
+    top: 110px;
+  }
+
   .lg\:mx-\[40px\] {
     margin-left: 40px;
     margin-right: 40px;
@@ -1392,6 +1416,10 @@ video {
     font-size: 80px;
   }
 
+  .lg\:text-60 {
+    font-size: 60px;
+  }
+
   .lg\:leading-18 {
     line-height: 18px;
   }
@@ -1414,6 +1442,10 @@ video {
 
   .lg\:leading-78 {
     line-height: 78px;
+  }
+
+  .lg\:leading-53 {
+    line-height: 53px;
   }
 }
 @media (min-width: 1352px) {
@@ -1534,6 +1566,14 @@ video {
     font-size: 25px;
   }
 
+  .xl\:text-60 {
+    font-size: 60px;
+  }
+
+  .xl\:text-66 {
+    font-size: 66px;
+  }
+
   .xl\:leading-22 {
     line-height: 22px;
   }
@@ -1556,5 +1596,13 @@ video {
 
   .xl\:leading-80 {
     line-height: 80px;
+  }
+
+  .xl\:leading-53 {
+    line-height: 53px;
+  }
+
+  .xl\:leading-58 {
+    line-height: 58px;
   }
 }
