--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -523,7 +523,7 @@ video {
   }
 }
 .container {
-  max-width: 390px;
+  max-width: 420px;
   width: auto;
   margin-left: auto;
   margin-right: auto;
@@ -603,6 +603,27 @@ video {
 .top-\[unset\] {
   top: unset;
 }
+.right-\[60px\] {
+  right: 60px;
+}
+.right-\[80px\] {
+  right: 80px;
+}
+.top-\[80px\] {
+  top: 80px;
+}
+.top-\[40px\] {
+  top: 40px;
+}
+.right-\[74px\] {
+  right: 74px;
+}
+.top-\[33px\] {
+  top: 33px;
+}
+.top-\[50px\] {
+  top: 50px;
+}
 .-z-10 {
   z-index: -10;
 }
@@ -624,6 +645,9 @@ video {
 .z-\[999\] {
   z-index: 999;
 }
+.z-\[998\] {
+  z-index: 998;
+}
 .order-1 {
   order: 1;
 }
@@ -644,6 +668,10 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+.mx-\[15px\] {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 .mb-4 {
   margin-bottom: 40px;
@@ -744,20 +772,11 @@ video {
 .h-full {
   height: 100%;
 }
-.h-\[510px\] {
-  height: 510px;
-}
-.h-\[610px\] {
-  height: 610px;
+.h-\[2px\] {
+  height: 2px;
 }
 .max-h-\[unset\] {
   max-height: unset;
-}
-.min-h-\[500px\] {
-  min-height: 500px;
-}
-.min-h-\[510px\] {
-  min-height: 510px;
 }
 .w-\[110px\] {
   width: 110px;
@@ -781,6 +800,9 @@ video {
 }
 .w-screen {
   width: 100vw;
+}
+.w-\[70px\] {
+  width: 70px;
 }
 .max-w-\[206px\] {
   max-width: 206px;
@@ -857,11 +879,11 @@ video {
 .overflow-y-scroll {
   overflow-y: scroll;
 }
-.rounded-full {
-  border-radius: 9999px;
-}
 .rounded-\[full\] {
   border-radius: full;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .bg-\[\#0A1F161A\] {
   background-color: #0A1F161A;
@@ -971,14 +993,6 @@ video {
   padding-top: 80px;
   padding-bottom: 80px;
 }
-.px-\[40px\] {
-  padding-left: 40px;
-  padding-right: 40px;
-}
-.py-\[70px\] {
-  padding-top: 70px;
-  padding-bottom: 70px;
-}
 .pb-2 {
   padding-bottom: 20px;
 }
@@ -1033,6 +1047,15 @@ video {
 .pt-\[80px\] {
   padding-top: 80px;
 }
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+.pt-\[74px\] {
+  padding-top: 74px;
+}
+.pt-\[40px\] {
+  padding-top: 40px;
+}
 .text-center {
   text-align: center;
 }
@@ -1071,9 +1094,6 @@ video {
 }
 .text-55 {
   font-size: 55px;
-}
-.text-\[20px\] {
-  font-size: 20px;
 }
 .font-bold {
   font-weight: 700;
@@ -1120,6 +1140,12 @@ video {
 .leading-48 {
   line-height: 48px;
 }
+.leading-60 {
+  line-height: 60px;
+}
+.leading-16 {
+  line-height: 16px;
+}
 .tracking-wider {
   letter-spacing: 0.05em;
 }
@@ -1162,16 +1188,9 @@ video {
 .hover\:bg-\[\#FF7922\]\/\[0\.75\]:hover {
   background-color: rgb(255 121 34 / 0.75);
 }
-.hover\:text-\[\#8CC63F\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(140 198 63 / var(--tw-text-opacity));
-}
 .hover\:text-\[\#FADE6C\]:hover {
   --tw-text-opacity: 1;
   color: rgb(250 222 108 / var(--tw-text-opacity));
-}
-.hover\:underline:hover {
-  text-decoration-line: underline;
 }
 @media (min-width: 768px) {
 
@@ -1255,10 +1274,6 @@ video {
     height: 100vh;
   }
 
-  .md\:h-\[830px\] {
-    height: 830px;
-  }
-
   .md\:max-h-\[768px\] {
     max-height: 768px;
   }
@@ -1285,10 +1300,6 @@ video {
 
   .md\:max-w-\[603px\] {
     max-width: 603px;
-  }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:space-x-\[30px\] > :not([hidden]) ~ :not([hidden]) {
@@ -1329,6 +1340,10 @@ video {
     padding-top: 35.5px;
   }
 
+  .md\:pt-\[unset\] {
+    padding-top: unset;
+  }
+
   .md\:text-center {
     text-align: center;
   }
@@ -1363,10 +1378,6 @@ video {
 
   .md\:text-80 {
     font-size: 80px;
-  }
-
-  .md\:text-\[40px\] {
-    font-size: 40px;
   }
 
   .md\:leading-100 {
@@ -1669,10 +1680,6 @@ video {
   }
 
   .lg\:text-80 {
-    font-size: 80px;
-  }
-
-  .lg\:text-\[80px\] {
     font-size: 80px;
   }
 
