--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -176,3 +176,7 @@ body {
 //   object-fit: cover !important;
 //   object-position: center !important;
 // }
+
+html {
+  scroll-padding-top: 40px;
+}
